# districtr-serverless

./: README.md
assignedUnits/: README.md  lambda_function.py
blockAssignPython/: README.md  lambda_function.py
blockAssignPython/blockAssignDataProcessing/: block_assigns2020.py  blockgroups_to_blocks.py
districtCenter/: README.md
districtCenter/districtCenter/: lambda_function.py
districtCenter/districtCenterDataPrep/: data_prep.py
districtCenter/resources/: alaska_precincts.csv  california_blockgroups.csv  colorado_blockgroups.csv  district_of_columbia_blockgroups.csv  hawaii_blockgroups.csv  kansas_blockgroups.csv  maryland_blockgroups.csv  minnesota_blockgroups.csv  mississippi_blockgroups.csv  nevada_blockgroups.csv  new_mexico_blockgroups.csv  new_mexico_precincts.csv  new_york_blockgroups.csv  north_carolina_blockgroups.csv  ohio_blockgroups.csv  oklahoma_blockgroups.csv  oregon_blockgroups.csv  pennsylvania_precincts.csv  puerto_rico_blockgroups.csv  tennessee_blockgroups.csv  utah_blockgroups.csv  utah_precincts.csv  washington_blockgroups.csv  wisconsin_precincts.csv
districtContiguity/: README.md
districtContiguity/districtContiguity/: lambda_function.py
export/: app.py  config.json  pyproject.toml  zappa_settings.json
localElectionDetails/: README.md
localElectionDetails/dataPrep/: prep.py
planEvaluation/: README.md  lambda_function.py  plan_metrics.py
planThumbnail/: README.md  lambda_function.py
s3Capabilities/: lambda_function.py
transferBase64toS3/: README.md  lambda_function.py
unassignedUnits/: README.md  lambda_function.py
(+266 files in other folders)
